syntax = "proto3";

package enrollment;

service EnrollmentService{
    rpc GetUserEnrollments(GetUserEnrollmentsRequest) returns (Enrollments);
    rpc CheckUserEnrollment(CheckUserEnrollmentRequest) returns (CheckUserEnrollmentResponse);
}

message PaginationQueryParams {
    int32 page = 1;
    int32 limit = 2;
    string search_query = 3;
    repeated string search_fields = 4;
    map<string,string> filters = 5;
    string sort_by = 6;
    string sort_order = 7;
}

message GetUserEnrollmentsRequest {
    string user_id = 1;
    PaginationQueryParams pagination = 2;
}

message Enrollments {
    int32 total = 1;
    repeated Enrollment enrollments = 2;
}

message Enrollment {
    string id = 1;
    string user_id = 2;
    string course_id = 3;
    string status = 4;
    string payment_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CheckUserEnrollmentRequest {
    string user_id = 1;
    string course_id = 2;
}

message CheckUserEnrollmentResponse {
    bool is_enrolled = 1;
}